# flash-attn-lab

./: .gitignore  DESIGN_NOTES.md  LICENSE  README.md  RESULTS.md  pyproject.toml  requirements.txt  setup.py
bench/: __init__.py  harness.py  ncu_extract.py  plot.py  profile_one.py  roofline.py
bench/results/: l4.csv
flash_attn_lab/: __init__.py
flash_attn_lab/cuda_kernels/: __init__.py  bindings.cpp  build.py  decode_attention.cu  matmul_tiled.cu  reduce.cu  softmax_online.cu
flash_attn_lab/ops/: __init__.py  attention.py
flash_attn_lab/triton_kernels/: __init__.py  decode.py  fp8.py  gqa.py  prefill.py
flash_attn_lab/utils/: __init__.py  device.py  reference.py
notebooks/: colab_setup.ipynb
tests/: conftest.py  test_cuda_decode.py  test_cuda_matmul.py  test_cuda_reduce.py  test_cuda_softmax.py  test_op_integration.py  test_triton_prefill.py
